2001-04-26  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* configure.in: Don't define TERMLIBS.  Do add terminal lib(s) to LIBS.
	* octave-bug.in: Delete references to TERMLIBS.
	* Makeconf.in: Likewise.

	* Makeconf.in (LIBREADLINE): Delete substitution.
	(do-subst-config-vals): Likewise.
	* octMakefile.in (SUBDIRS): Delete @READLINE_DIR@ from the list.
	* configure.in (AC_CONFIG_SUBDIRS): Delete $READLINE_DIR from the list.

	* configure.in (VOID_SIGHANDLER): Don't check or substitute here.

2001-04-25  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* octMakefile.in (install, install-strip): Don't use mk-includedir-link

	* Makeconf.in (mk-includedir-link, mk-libdir-link): Delete definitions.

2001-04-24  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Makeconf.in (mk-libdir-link): Undo previous change

2001-04-23  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* configure.in: Only check for libz if checking for HDF5 libraries.
	Allow user to specify HDF5 library name on command line, same as
	for BLAS libraries.  Include BLAS and HDF5 libs in summary output.

2001-04-19  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* octMakefile.in (CONF_DISTFILES): Remove config.h.bot from the list.

2001-04-19  David Livings <david.livings@asa.co.uk>

	* Makeconf.in (mk-libdir-link): Omit check for $(octlibdir)/octave
	existing as a directory.

2001-02-28  Albert Chin-A-Young  <china@thewrittenword.com>

	* configure.in: Check for getpwnam in libsun only after checking
	default libraries first.  Check for gethostname in libsocket only
	after checking default libraries first.	

2001-02-22  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* configure.in: Allow for using f2c when setting functions to look
	for in the BLAS and Lapack libraries.
	From Kurt Hornik <Kurt.Hornik@ci.tuwien.ac.at>.

2001-02-10  Mumit Khan  <khan@nanotech.wisc.edu>

	* test/octave.test/string/dec2hex-1.m: Don't assume hex format
	produces lower case letters.

2001-02-07  John W. Eaton  <jwe@bevo.che.wisc.edu>
