@@ -21,7 +21,7 @@ dnl Copyright (C) 1996, 1997 John W. Eaton
 ### Software Foundation, 59 Temple Place - Suite 330, Boston, MA
 ### 02111-1307, USA. 
 
-AC_REVISION($Revision: 1.344 $)
+AC_REVISION($Revision: 1.345 $)
 AC_PREREQ(2.9)
 AC_INIT(src/octave.cc)
 AC_CONFIG_HEADER(config.h)
@@ -1394,11 +1394,6 @@ fi
 
 if test -n "$warn_f2c_no_lib"; then
   AC_MSG_WARN($warn_f2c_no_lib)
-  warn_msg_printed=true
-fi
-
-if test -n "$warn_readline"; then
-  AC_MSG_WARN($warn_readline)
   warn_msg_printed=true
 fi
 
